--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="introducao/basico.js" ></script>
     <script src="tipos/tipos.js" ></script>
     <script src="compilador/compilador.js" ></script>
+    <script src="ecmascript/ecmascript.js" ></script>
+    <script src="classes/classes.js" ></script>
     
 </body>
 </html>
