--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="compilador/compilador.js" ></script>
     <script src="ecmascript/ecmascript.js" ></script>
     <script src="classes/classes.js" ></script>
+    <script src="classes/desafio.js" ></script>
     
 </body>
 </html>
