--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
     <script src="nomespaces/nomespaces.js" ></script>
     <!-- <script src="modulos/modulos.js" ></script> -->
     <script>
-        SystemJS.config({
-            baseUrl: '/modulos',
-            packages: {
-                '/modulos': {
-                    defaultJSExtension: true
-                }
-            }
-        })
-
-        SystemJS.import('./modulos/modulos.js')
-    </script>
+        // SystemJS.config({
+            //     baseUrl: '/modulos',
+            //     packages: {
+                //         '/modulos': {
+                    //             defaultJSExtension: true
+                    //         }
+                    //     }
+                    // })
+                    
+                    // SystemJS.import('./modulos/modulos.js')
+                    </script>
     
+    <script src="interfaces/interfaces.js" ></script>
 </body>
 </html>
